Se agrega opcion de permitir cargar los productos al carrito, aumentar su cantidad y eliminarlos. Uso de useContext,useId

--- a/sixthPartReactCourse/06-shopping-cart/src/components/Products.css
+++ b/sixthPartReactCourse/06-shopping-cart/src/components/Products.css
@@ -39,3 +39,11 @@
   object-fit: cover;
   background: #fff;
 }
+
+.add-to-cart {
+  background-color: #09f;
+}
+
+.remove-from-cart {
+  background-color: #c00707;
+}
